--- a/_sass/pages/template-post.scss
+++ b/_sass/pages/template-post.scss
@@ -323,53 +323,3 @@ ul {
     font-size: 1.1em;
   }
 }
-
-// BACK Button Top of modal
-
-.take-me-back-top {
-  display: block;
-  position: fixed;
-  top: 1em;
-  left: 1em;
-  text-transform: uppercase;
-  border: 2px solid $c-salmon;
-  letter-spacing: 5px;
-  color: $c-salmon;
-  font-weight: 600;
-  font-size: 1.2em;
-  padding: .5em 1em;
-  cursor: pointer;
-  z-index: 5;
-  @include max-xxs {
-    padding: .64em .6em .5em .8em;
-    font-weight: 700;
-    font-size: 1.06em;
-    letter-spacing: 4px;
-    background:#fff;
-  }
-  transform: translateY(-4em);
-  -ms-animation-name: mobile-modal-back-button;
-  -ms-animation-duration: 1s;
-  -ms-animation-fill-mode: forwards;
-  -ms-animation-delay: 1.5s;
-  -webkit-animation-name: mobile-modal-back-button;
-  -webkit-animation-duration: 1s;
-  -webkit-animation-fill-mode: forwards;
-  -webkit-animation-delay: 1.5s;
-  animation-name: mobile-modal-back-button;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-  animation-delay: 1.5s;
-}
-@-ms-keyframes mobile-modal-back-button {
-  0% {transform: translateX(-4em); opacity:0; display: block;}
-  100% {transform: translateX(0em); opacity:1;}
-}
-@-webkit-keyframes mobile-modal-back-button {
-  0% {transform: translateX(-4em); opacity:0;display: block;}
-  100% {transform: translateX(0em); opacity:1;}
-}
-@keyframes mobile-modal-back-button {
-  0% {transform: translateX(-4em); opacity:0;display: block;}
-  100% {transform: translateX(0em); opacity:1;}
-}
